# django_lazy_json_field

./: .flake8  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: run_test.yml
example_project/: settings.py  urls.py
example_project/test_app/: admin.py  apps.py  models.py
example_project/test_app/fixtures/: test_model.json
example_project/test_app/migrations/: 0001_initial.py
example_project/test_app/tests/: test_lazy_json_field.py
lazy_json_field/: fields.py  lazy_json.py  utils.py
lazy_json_field/tests/: test_encoder.py  test_lazy_json.py
